--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Design + BIM + Computing"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Jinsung Kim"
+name                     : "BIMJinsung"
 description              : "A BIM-enabled Design Research and Development website."
 url                      : "https://JSKim0212.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -107,10 +107,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jinsung KIM"
+  name             : "BIMJinsung"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** BIM JInsung."
-  location         : "Dept. of Interiro Archtecture & Built Environment, Yonsei Univ. <br>"
+  bio              : "I am an **amazing** BIM researcher."
+  location         : "Design IT Lab<br>Dept. of Interiro Archtecture & Built Environment<br>Yonsei Univ.<br>Seoul"
   email            :
   links:
     - label: "Email"
